# aiida-quantumespresso-ph

./: .pre-commit-config.yaml  LICENSE.txt  environment.yml  pyproject.toml
.github/config/: code-ph.yaml
.github/workflows/: ci.yml
docs/source/: 1_dynmat.ipynb  index.md
docs/source/get_started/: installation.md
docs/source/local_module/: temp_profile.py
examples/: DM_test_protocol.ipynb  Phonon_dispersion_example.ipynb  dynmat-protocol.ipynb  test_dynamical_workchain.py
kotiuga_phonon/workflows/: dynamical_matrix.py
src/aiida_quantumespresso_ph/: __init__.py
src/aiida_quantumespresso_ph/workflows/: dynamical_matrix.py  ph_interpolate.py
src/aiida_quantumespresso_ph/workflows/ph/: parallelize_qpoints.py
src/aiida_quantumespresso_ph/workflows/protocols/: dynamical_matrix.yaml
tests/: conftest.py  test_version.py
tests/workflows/ph/: test_main.py  test_parallelize_qpoints.py
tests/workflows/protocols/ph/test_main/: test_default.yml
tests/workflows/protocols/test_dynamical_matrix/: test_default.yml
